--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ var	valueline = d3.svg.line()
 	.y(function(d) { return y(d.PriceUSD); });
     
 // Adds the svg canvas
-var	svg = d3.select("qq")
+var	svgf = d3.select("qq")
 	.append("svg")
 		.attr("width", width + margin.left + margin.right)
 		.attr("height", height + margin.top + margin.bottom)
@@ -321,25 +321,25 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	y.domain([0, d3.max(data, function(d) { return d.PriceUSD; })]);
  
 	// Add the valueline path.
-	svg.append("path")	
+	svgf.append("path")	
 		.attr("class", "line")
 		.attr("d", valueline(data));
  
 	// Add the X Axis
-	svg.append("g")		
+	svgf.append("g")		
 		.attr("class", "x axis")
 		.style("font", "10px sans-serif")
 		.attr("transform", "translate(0," + height + ")")
 		.call(xAxis);
  
 	// Add the Y Axis
-	svg.append("g")		
+	svgf.append("g")		
 		.attr("class", "y axis")
 		.style("font", "10px sans-serif")
 		.call(yAxis);
 	
 	// Add point
-	svg.append("circle")
+	svgf.append("circle")
     	.attr("class", "dot")
     	.attr("cx", x(parseDate("5/23/2017")))
     	.attr("cy", "0.003476")
@@ -347,7 +347,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	
 	// Add annotation
 	
-	svg.append("text")
+	svgf.append("text")
 	.attr("class", "annotation")
 	.attr("x", (x(parseDate("5/23/2017"))-110))
     	.attr("y", "0.003476")
