--- a/index.html
+++ b/index.html
@@ -323,7 +323,11 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	// Add the valueline path.
 	svgf.append("path")	
 		.attr("class", "line")
-		.attr("d", valueline(data));
+		.attr("clip-path", "url(#clip)")
+		.attr("d", valueline(data))
+		.append("g")
+        		.attr("class", "brush")
+        		.call(brush);
  
 	// Add the X Axis
 	svgf.append("g")		
@@ -353,6 +357,62 @@ d3.csv("dogecoin1.csv", function(error, data) {
     	.attr("y", height-0.003476)
 	.attr('text-anchor', 'right')
 	.text("2017 Crypto Boom");
+	
+	//ADD BRUSHING
+	 var clip = svgf.append("defs").append("svgf:clipPath")
+        .attr("id", "clip")
+        .append("svg:rect")
+        .attr("width", width )
+        .attr("height", height )
+        .attr("x", 0)
+        .attr("y", 0);
+	
+	var brush = d3.brushX()                   // Add the brush feature using the d3.brush function
+        .extent( [ [0,0], [width,height] ] )  // initialise the brush area: start at 0,0 and finishes at width,height: it means I select the whole graph area
+        .on("end", updateChart)               // Each time the brush selection changes, trigger the 'updateChart' function
+	
+	var idleTimeout
+    		function idled() { idleTimeout = null; }
+	
+	    // A function that update the chart for given boundaries
+    function updateChart() {
+
+      // What are the selected boundaries?
+      extent = d3.event.selection
+
+      // If no selection, back to initial coordinate. Otherwise, update X axis domain
+      if(!extent){
+        if (!idleTimeout) return idleTimeout = setTimeout(idled, 350); // This allows to wait a little bit
+        x.domain([ 4,8])
+      }else{
+        x.domain([ x.invert(extent[0]), x.invert(extent[1]) ])
+        line.select(".brush").call(brush.move, null) // This remove the grey brush area as soon as the selection has been done
+      }
+
+      // Update axis and line position
+      xAxis.transition().duration(1000).call(d3.axisBottom(x))
+      line
+          .select('.line')
+          .transition()
+          .duration(1000)
+          .attr("d", d3.line()
+            .x(function(d) { return x(d.date) })
+            .y(function(d) { return y(d.value) })
+          )
+    }
+	
+	svgf.on("dblclick",function(){
+      x.domain(d3.extent(data, function(d) { return d.date; }))
+      xAxis.transition().call(d3.axisBottom(x))
+      line
+        .select('.line')
+        .transition()
+        .attr("d", d3.line()
+          .x(function(d) { return x(d.date) })
+          .y(function(d) { return y(d.value) })
+      )
+	
+	
  
 });
  
