--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
           .duration(1000)
           .attr("d", d3.line()
             .x(function(d) { return x(d.date) })
-            .y(function(d) { return y(d.value) })
+            .y(function(d) { return y(d.PriceUSD) })
           )
     }
 	
@@ -409,7 +409,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
         .transition()
         .attr("d", d3.line()
           .x(function(d) { return x(d.date) })
-          .y(function(d) { return y(d.value) })
+          .y(function(d) { return y(d.PriceUSD) })
       )
 	
 	
