--- a/index.html
+++ b/index.html
@@ -199,8 +199,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 										<p>On April 14, 2018, just before the entire market entered “crypto winter” and crashed to former lows, a vast majority of crypto projects staged
 											a brief recovery. In three days, dogecoin rose 103% from $0.0020 to $0.0041. For comparison, bitcoin only managed to secure a 40% rise within
 											the same month.<br>
-											By this time, dogecoin’s market capitalization had been cut by more than half from its all-time high down to $573 million.									</li>
-								</ul>								</p>
+											By this time, dogecoin’s market capitalization had been cut by more than half from its all-time high down to $573 million.</p>
 									</li>
 								</ul>								
 							</section>
