--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@ d3.csv("dogecoin1.csv", function(error, data) {
 										<p>On April 14, 2018, just before the entire market entered “crypto winter” and crashed to former lows, a vast majority of crypto projects staged
 											a brief recovery. In three days, dogecoin rose 103% from $0.0020 to $0.0041. For comparison, bitcoin only managed to secure a 40% rise within
 											the same month.<br>
-											By this time, dogecoin’s market capitalization had been cut by more than half from its all-time high down to $573 million.</p>
+											By this time, dogecoin’s market capitalization had been cut by more than half from its all-time high down to $573 million.									</li>
+										</p>
 									</li>
 								</ul>								
 							</section>
@@ -218,6 +219,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 											insufficient funding to continue developing the bridge and the update was put on hold. Since then, there has been no mention of whether
 											this bridge between Dogecoin and Ethereum will ever be continued. 
 										</p>
+									</li>
 							</section>
 
 						<!-- Get Started -->
@@ -322,8 +324,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	// Add the valueline path.
 	svgf.append("path")	
 		.attr("class", "line")
-		.attr("clip-path", "url(#clip)")
-		.attr("d", valueline(data))
+		.attr("d", valueline(data));
  
 	// Add the X Axis
 	svgf.append("g")		
@@ -353,7 +354,9 @@ d3.csv("dogecoin1.csv", function(error, data) {
     	.attr("y", height-0.003476)
 	.attr('text-anchor', 'right')
 	.text("2017 Crypto Boom");
-	
+ 
+});
+ 
 </script>
 										
 									
