--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	.attr("x", (x(parseDate("5/23/2017"))-110))
     	.attr("y", height-0.003476)
 	.attr('text-anchor', 'right')
-	.text("2017 Crypto Boom");
+	.text("2017 Crypto Boom.");
  
 });
  
