--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ var	margin1 = {top: 30, right: 20, bottom: 30, left: 50},
 var	parseDate = d3.time.format("%m/%d/%Y").parse;
  
 // Set the ranges
-var	x = d3.time.scale().range([0, width1]);
-var	y = d3.scale.linear().range([height1, 0]);
+var	x1 = d3.time.scale().range([0, width1]);
+var	y1 = d3.scale.linear().range([height1, 0]);
  
 // Define the axes
 var	xAxis1 = d3.svg.axis().scale(x)
@@ -104,8 +104,8 @@ var	yAxis1 = d3.svg.axis().scale(y)
  
 // Define the line
 var	valueline1 = d3.svg.line()
-	.x(function(d) { return x(d.date); })
-	.y(function(d) { return y(d.PriceUSD); });
+	.x(function(d) { return x1(d.date); })
+	.y(function(d) { return y1(d.PriceUSD); });
     
 // Adds the svg canvas
 var	svg1 = d3.select("#one")
