--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	svg1.append("circle")
     	.attr("class", "dot") // Assign a class for styling
     	.attr("cx", x(parseDate("5/23/2017")))
-    	.attr("cy", height-0.003476)
+    	.attr("cy", 0.003476)
     	.attr("r", 5)
 	
 	// Add annotation
@@ -158,7 +158,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	svg1.append("text")
 	.attr("class", "annotation")
 	.attr("x", (x(parseDate("5/23/2017"))-110))
-    	.attr("y", height-0.003476)
+    	.attr("y", 0.003476)
 	.attr('text-anchor', 'right')
 	.text("2017 Crypto Boom");
  
@@ -343,7 +343,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	svgf.append("circle")
     	.attr("class", "dot")
     	.attr("cx", x(parseDate("5/23/2017")))
-    	.attr("cy", height-0.003476)
+    	.attr("cy", 0.003476)
     	.attr("r", 5)
 	
 	// Add annotation
@@ -351,7 +351,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	svgf.append("text")
 	.attr("class", "annotation")
 	.attr("x", (x(parseDate("5/23/2017"))-110))
-    	.attr("y", height-0.003476)
+    	.attr("y", 0.003476)
 	.attr('text-anchor', 'right')
 	.text("2017 Crypto Boom.");
  
