--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 		d.PriceUSD = +d.PriceUSD;
 	});
 	
-	data = data.filter(function(d,i){ return (i<1517 && i>1297)});
+	data = data.filter(function(d,i){ return (i>1296 && i<1517)});
  
 	// Scale the range of the data
 	x.domain(d3.extent(data, function(d) {return d.date;}));
