--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	.attr("x", (x(parseDate("1/7/2018"))-110))
     	.attr("y", 0.016763)
 	.attr('text-anchor', 'right')
-	.text("2017 Crypto Boom");
+	.text("Bitcoin breaks $19,783");
  
 });
  
