--- a/index.html
+++ b/index.html
@@ -455,6 +455,22 @@ d3.csv("dogecoin1.csv", function(error, data) {
     	.attr("y", height-0.003476)
 	.attr('text-anchor', 'right')
 	.text("2017 Crypto Boom");
+	
+	// Add point
+	svgf.append("circle")
+    	.attr("class", "dot") // Assign a class for styling
+    	.attr("cx", x(parseDate("1/7/2018")))
+    	.attr("cy", 0.016763)
+    	.attr("r", 5)
+	
+	// Add annotation
+	
+	svgf.append("text")
+	.attr("class", "annotation")
+	.attr("x", (x(parseDate("1/7/2018"))-130))
+    	.attr("y", 0.016763)
+	.attr('text-anchor', 'right')
+	.text("Bitcoin breaks $19,783");
  
 });
  
