--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	svgf.append("circle")
     	.attr("class", "dot") // Assign a class for styling
     	.attr("cx", x(parseDate("1/7/2018")))
-    	.attr("cy", height-0.016763)
+    	.attr("cy", "0.016763")
     	.attr("r", 5)
 	
 	// Add annotation
