--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	svg2.append("circle")
     	.attr("class", "dot") // Assign a class for styling
     	.attr("cx", x(parseDate("1/7/2018")))
-    	.attr("cy", y(0.016763))
+    	.attr("cy", 0.016763)
     	.attr("r", 5)
 	
 	// Add annotation
@@ -287,7 +287,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	svg2.append("text")
 	.attr("class", "annotation")
 	.attr("x", (x(parseDate("1/7/2018"))-130))
-    	.attr("y", y(0.016763))
+    	.attr("y", 0.016763)
 	.attr('text-anchor', 'right')
 	.text("Bitcoin breaks $19,783");
  
@@ -405,7 +405,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	svg3.append("circle")
     	.attr("class", "dot") // Assign a class for styling
     	.attr("cx", x(parseDate("4/14/2018")))
-    	.attr("cy", y(0.005818))
+    	.attr("cy", y+0.005818)
     	.attr("r", 5)
 	
 	// Add annotation
@@ -413,7 +413,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 	svg3.append("text")
 	.attr("class", "annotation")
 	.attr("x", (x(parseDate("4/14/2018"))-130))
-    	.attr("y", y(0.005818))
+    	.attr("y", y+0.005818)
 	.attr('text-anchor', 'right')
 	.text("Crypto markets rebound");
  
