--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 						<!-- Sixth Section -->								
 							<section id="graph" class="main special">
 								<header class="major">
-									<h2>Dogecoin Value since 2013</h2>
+									<h2>Dogecoin Value since December 2013</h2>
 								</header>
 								<ul class="content">
 										<span class="spotlight"> 
