--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 							<li><a href="#third">3</a></li>
 							<li><a href="#fourth">4</a></li>
 							<li><a href="#fifth">5</a></li>
+							<li><a href="#graph">*</a></li>
 						</ul>
 					</nav>
 
