--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								
 												
 <!-- load the d3.js library -->	
-<script src="https://d3js.org/d3.v4.js"></script>
+<script src="https://d3js.org/d3.v7.min.js"></script>
  
 <script>
  
