--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 	height = 600 - margin.top - margin.bottom;
  
 // Parse the date / time
-var	parseDate = d3.time.format("%m/%d/%Y").parse;
+var	parseDate = d3.timeParse("%m/%d/%Y");
  
 // Set the ranges
 var	x = d3.time.scale().range([0, width]);
@@ -219,7 +219,7 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 	height = 600 - margin.top - margin.bottom;
  
 // Parse the date / time
-var	parseDate = d3.time.format("%m/%d/%Y").parse;
+var	parseDate = d3.timeParse("%m/%d/%Y");
  
 // Set the ranges
 var	x = d3.time.scale().range([0, width]);
@@ -345,7 +345,7 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 	height = 600 - margin.top - margin.bottom;
  
 // Parse the date / time
-var	parseDate = d3.time.format("%m/%d/%Y").parse;
+var	parseDate = d3.timeParse("%m/%d/%Y");
  
 // Set the ranges
 var	x = d3.time.scale().range([0, width]);
@@ -473,7 +473,7 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 	height = 600 - margin.top - margin.bottom;
  
 // Parse the date / time
-var	parseDate = d3.time.format("%m/%d/%Y").parse;
+var	parseDate = d3.timeParse("%m/%d/%Y");
  
 // Set the ranges
 var	x = d3.time.scale().range([0, width]);
@@ -601,7 +601,7 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 	height = 600 - margin.top - margin.bottom;
  
 // Parse the date / time
-var	parseDate = d3.time.format("%m/%d/%Y").parse;
+var	parseDate = d3.timeParse("%m/%d/%Y");
  
 // Set the ranges
 var	x = d3.time.scale().range([0, width]);
@@ -723,7 +723,7 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 	height = 600 - margin.top - margin.bottom;
  
 // Parse the date / time
-var	parseDate = d3.time.format("%m/%d/%Y").parse;
+var	parseDate = d3.timeParse("%m/%d/%Y");
  
 // Set the ranges
 var	x = d3.time.scale().range([0, width]);
