--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 var	parseDate = d3.timeParse("%m/%d/%Y");
  
 // Set the ranges
-var	x = d3.time.scale().range([0, width]);
-var	y = d3.scale.linear().range([height, 0]);
+var	x = d3.scaleTime().range([0, width]);
+var	y = d3.scaleLinear().range([height, 0]);
  
 // Define the axes
 var	xAxis = d3.svg.axis().scale(x)
@@ -222,8 +222,8 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 var	parseDate = d3.timeParse("%m/%d/%Y");
  
 // Set the ranges
-var	x = d3.time.scale().range([0, width]);
-var	y = d3.scale.linear().range([height, 0]);
+var	x = d3.scaleTime().range([0, width]);
+var	y = d3.scaleLinear().range([height, 0]);
  
 // Define the axes
 var	xAxis = d3.svg.axis().scale(x)
@@ -348,8 +348,8 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 var	parseDate = d3.timeParse("%m/%d/%Y");
  
 // Set the ranges
-var	x = d3.time.scale().range([0, width]);
-var	y = d3.scale.linear().range([height, 0]);
+var	x = d3.scaleTime().range([0, width]);
+var	y = d3.scaleLinear().range([height, 0]);
  
 // Define the axes
 var	xAxis = d3.svg.axis().scale(x)
@@ -476,8 +476,8 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 var	parseDate = d3.timeParse("%m/%d/%Y");
  
 // Set the ranges
-var	x = d3.time.scale().range([0, width]);
-var	y = d3.scale.linear().range([height, 0]);
+var	x = d3.scaleTime().range([0, width]);
+var	y = d3.scaleLinear().range([height, 0]);
  
 // Define the axes
 var	xAxis = d3.svg.axis().scale(x)
@@ -604,8 +604,8 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 var	parseDate = d3.timeParse("%m/%d/%Y");
  
 // Set the ranges
-var	x = d3.time.scale().range([0, width]);
-var	y = d3.scale.linear().range([height, 0]);
+var	x = d3.scaleTime().range([0, width]);
+var	y = d3.scaleLinear().range([height, 0]);
  
 // Define the axes
 var	xAxis = d3.svg.axis().scale(x)
@@ -726,8 +726,8 @@ var	margin = {top: 30, right: 20, bottom: 30, left: 50},
 var	parseDate = d3.timeParse("%m/%d/%Y");
  
 // Set the ranges
-var	x = d3.time.scale().range([0, width]);
-var	y = d3.scale.linear().range([height, 0]);
+var	x = d3.scaleTime().range([0, width]);
+var	y = d3.scaleLinear().range([height, 0]);
  
 // Define the axes
 var	xAxis = d3.svg.axis().scale(x)
