--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@ var	xAxis = svgf.append("g")
         .call(d3.axisBottom(x));
  
 var	yAxis = svgf.append("g")
-      .call(d3.axisLeft(y)));
+      .call(d3.axisLeft(y));
 	
 // Define the line
 var	valueline = d3.svg.line()
